# muralis

./: .gitignore  AGENTS.md  CLAUDE.md  PRD_Muralis.md  README.md  ROTEIRO_DEMO.md  idl_visualizer.html  vercel.json
.claude/: settings.local.json
muralis_code/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
muralis_code/src/: App.tsx  index.css  types.ts
muralis_code/src/components/: AnchorContext.tsx  Layout.tsx  SolanaProvider.tsx
muralis_code/src/idl/: muralis_escrow.json  muralis_nft.json  muralis_rwa.json
muralis_code/src/pages/: Details.tsx  Home.tsx  Impact.tsx  Map.tsx  Profile.tsx  Register.tsx  Success.tsx  Wallet.tsx
muralis_code/src/services/: blockchainService.ts  storage.ts
muralis_code/src/state/: MuralisContext.tsx  flows.ts
muralis_code/src/utils/: uuid.ts
muralis_contracts/: Anchor.toml  README.md  package.json
muralis_contracts/.claude/: settings.local.json
muralis_contracts/programs/muralis_escrow/: Cargo.toml
muralis_contracts/programs/muralis_escrow/src/: lib.rs
muralis_contracts/programs/muralis_nft/: Cargo.toml
muralis_contracts/programs/muralis_nft/src/: lib.rs
muralis_contracts/programs/muralis_rwa/: Cargo.toml
muralis_contracts/programs/muralis_rwa/src/: lib.rs
muralis_contracts/tests/: muralis_escrow.ts  muralis_nft.ts  muralis_rwa.ts  smoke_escrow.ts  smoke_nft.ts  smoke_rwa.ts
skills/solana-anchor-dev/: SKILL.md
skills/startup-founder/: SKILL.md
skills/startup-marketing/: SKILL.md
