[package]
name = "muralis_rwa"
version = "0.1.0"
description = "Muralis — Anchor program for minting the Project RWA token (1-of-1 Metaplex NFT representing a sustainable urban mural). One mint per project_id."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "muralis_rwa"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
